website/templates/static/index.css
.navbar {
overflow: hidden;
background-color: #333;
font-family: Arial, Helvetica, sans-serif;
}

.navbar a {
float: left;
font-size: 16px;
color: white;
text-align: center;
padding: 10px 16px;
text-decoration: none;
}

.dropdown {
float: left;
overflow: hidden;
}

.dropdown .dropbtn {
font-size: 16px;
border: none;
outline: none;
color: white;
padding: 10px 10px;
background-color: inherit;
font-family: inherit;
margin: 0;
}

.navbar a:hover, .dropdown:hover .dropbtn {
background-color: red;
}

.dropdown-content {
display: none;
position: absolute;
background-color: #f9f9f9;
box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
z-index: 1;
}

.dropdown-content a {
float: none;
color: black;
padding: 6px 6px;
text-decoration: none;
display: block;
text-align: left;
}

.dropdown-content a:hover {
    background-color: #ddd;
}

.dropdown:hover .dropdown-content {
display: block;
}

.button {
padding: 4px;
border: 2px solid  #ccc!important;
border-radius: 4px;
}

.pic-button {
  border: 1px solid  #ccc!important;
  border-radius: 4px;
}

.img-button:hover {
  outline: 1px solid red;
}

.img-button {
}

.action_container{
    display: inline-block;
    white-space:nowrap;
}

.c-select {
margin-right: 15px;
border-radius: 4px 4px 1px 1px;
background: transparent;
}

.c-select:hover {
  border: 1px solid red;
}

.c-select option {
  background-color: rgba(255,255,255, .5);

}

.filter-button {
  background: grey;
  border-radius: 4px;
  color: white;
  border: none;
  padding: 2px;
  margin-left: 1px;
}

.filter-button:hover {
  background-color: red;
  color: white;
}

.menu-div {
  float: left;
  border-right: 2px solid darkgrey;
  border-left: 2px solid darkgrey;
  padding-left: 4px;
  padding-right: 4px;
  margin-left: 2px;
  margin-right: 2px;
  height: 100%;
}

.item {
  float: left;
  margin-left: 5px;
  margin-right: 5px;
}

.block {
  display: inline-block;
}

.textbox {
  float: left;
}

.selector {
  float: left;
}

.search {
  text-align: center;
}
.c-inputbox{
  border: 2px solid darkgrey;
  height: 20px;
  border-radius: 4px 2px 2px 10px;
  text-align: right;
  padding-right: 8px;
}

.c-inputbox:hover {
  border: 2px solid #F22613;
}

.c-midbutton {
  border: 1px solid darkgrey;
  height: 26px;
  border-radius: 2px 2px 2px 2px;
}

.c-endbutton {
  border: 1px solid darkgrey;
  height: 26px;
  border-radius: 2px 4px 10px 2px;
}


.c-midbutton:hover {
  background-color: #F22613;
  color: white;
  border: 1px solid black;
}

.c-endbutton:hover {
  background-color: #F22613;
  color: white;
  border: 1px solid black;
}

.search-categories {
    display: none;
    border: 1px solid darkgrey;
    border-radius: 8px;
}

#option-title {
    display: inline-block;
    height: 100%;
    font-weight: bold;
    margin-top: 8px;
}

.option-row {
    margin: 5px
    border-radius: 4px;
    width: fit-content;
}

.option-cell {
    display: inline-block;
    border-radius: 2px;
    vertical-align: top;
    margin: 5px;
}

.option-checkbox {
  display: inline;
}

.option-checkbox:hover {
  outline: 1px solid red;
}

.option-fieldname {
  display: inline;
}

.c-man-filter-placeholder {
  margin-top: 4px;
  margin-bottom: 10px;
}

.c-man-filter-button {
  border: 1px solid darkgrey;
  border-radius: 4px 4px 14px 14px;
}

.c-man-filter-button:hover {
  background-color: #F22613;
  color: white;
  border: 1px solid black;
}

.man-filter-title {
    font-weight: bold;
}

#manual-filters{
  display: none;
  border: 1px solid darkgrey;
  border-radius: 4px;
  width: auto;
}

#mass-select-options{
  display: none;
}

/*
#filter{
  display: none;
}
*/

.mfs-box {
  display: inline-block;
  border: 1px solid darkgrey;
  border-radius: 4px;
  margin: 5px;
  vertical-align: top;
}

.manual-filter-selection {
  margin: 5px;
  text-align: left;
  border-radius: 2px;
}

.manual-filter-selection:hover {
  outline: 1px solid #aaa;
}

.mfs-checkbox {
  display: inline;
}

.mfs-checkbox:hover {
  outline: 1px solid red;
}

.mfs-fieldname {
  display: inline;
}

.autofilter {
  display: none;
  color: black;
  position: absolute;
  background-color: #f8f8f8;
  opacity: .85;
  border: 1px solid darkgrey;
  border-radius: 4px;
  overflow: auto;
  box-shadow: 0px, 8px, 16px, 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.autofilter:hover {
  border: 1px solid #F22613;
}

.show {
  display: block;
}

.af-top {
  text-align: left;
  border-bottom: 2px double darkgrey;
  margin-bottom: 2px;
  padding: 2px;
}

.af-body {
  text-align: left;
  padding: 2px;
}

.af-selection:hover {
  outline: 1px solid #aaa;
}

.af-textinput {
  display: inline;
}

.textinput {
  border: 1px solid darkgrey;
  border-radius: 4px;
  text-align: left;
  padding: 5px;
  width: 150px;
}

.af-chkbxtitle {
  display: inline;
}

.af-qty {
  display: inline;
}

.af-checkbkox {
  display: inline;
}

.pageLeftTop {
  clear: both;
  display: inline-block;
  vertical-align: top;
  background-color: #f9f9f9;
  border-color: gainsboro;
  border-style: solid;
  border-width: 1px;
  margin-top: 5px;
  margin-right: 10px;
}

.nowrap {
    white-space: nowrap;
}

.inline-block {
    display: inline-block;
}

.active {
  padding: 10px 10px;
  background-color: gray;
  color: white;
  text-decoration: none;
  display: block;
  text-align: left;
}

.menu-choice {
    color: black;
    padding: 10px 10px;
    text-decoration: none;
    display: block;
    text-align: center;
}

.menu-choice a {
  color: black;
}

.menu-choice button {
  text-align: center;
  color: black;
  width: 100%;
}

.vertical-menu {
  width: 100%;
  background-color: #eee;
  font-weight: bold;
}

.dropdown-content a {
  padding: 12px;
  text-decoration: none;
}

.menu-choice:hover, .dropdown-content a:hover {
  background-color: #C8C8C8;
  color: red;
}

.menu2 {
	height: 30px;
    background-color: ghostwhite;
    border-style: solid;
    border-color: gainsboro;
    border-width: 1px;
    margin-top: 5px;
    margin-bottom: 5px;
    float: left;
    text-align: left;
	padding: 5px;
    border-radius: 2px;
}

.pageContent{
	clear : none;
	height : auto;
    width: auto;
    margin-top: 5px;
}

.main-table {
    width: 90%;
    border-radius: 6px;
    border: 2px solid #85BDE4;
    text-align: center;
}

.main-table th {
    background-color: #444;
    color: white;
    font-weight: normal;
    border-radius: 5px 5px 1px 1px;
    border: 1px solid darkgrey;
    box-shadow: 1px 3px #777;
    max-width: 100%;
    white-space: nowrap;
}

.main-table tbody td{
    border-bottom: 1px solid grey;
}

.main-table tbody tr:nth-of-type(odd) {
    background-color: rgba(94, 93, 82, 0.0);
}

.main-table tbody tr:nth-of-type(even) {
    background-color: rgba(94, 93, 82, 0.2);
}

.row:hover{
    outline: 1px solid #9932cc;
}

.no-data {
   align: center;
   color: red;
}

.textdiv {
	float: left;
	margin: 10px;
}

.modaljs {
    position: fixed;
    top: 10%;
    padding: 40px 50px;
    background-color: white;
    z-index: 10000;
    width: 600px;
    min-height: 100px;
    display: none;
    left: 50%;
    margin-left: -300px;
    overflow: auto;
    max-height: 60%;
    border-bottom: solid 5px;
    box-sizing: border-box;
    box-shadow: 2px 2px 13px 2px #555;
    overflow: auto;
    border-radius: 10px;
    display:none;
}
.modaljs.on{
    display:block;
}
.modal-js-overlay{
    background:#444;
    opacity:.8;
    position:fixed;
    top:0px;
    width:100%;
    height:100%;
    z-index:1000;
    left:0px;
}
.modal-js-close {
    position: absolute;
    top: 0px;
    right: 10px;
    font-size: 20pt;
    cursor: pointer;
    border-radius: 50%;
    height: 30px;
    width: 30px;
    text-align: center;
    font-weight: bold;
}

.modaljs.shelf{
    top:0px;
    right:0px;
    left: auto;
    height: 100%;
    max-height:100%;
    width:50%;
}

@media screen and (max-width: 890px) {

.modaljs{
    width: 100%;
    box-sizing: border-box;
    left: 0px;
    margin-left: 0px;
}
}

